syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.demo.grpc.function.model.user";
option java_outer_classname = "UserInfoModel";


message UserInfo{
  int64 id = 1;
  string username = 2;
}